classDiagram
    class Project {
        +String ID
        +String Name
        +String RepoURL
        +String GitHubUser
        +String RuntimeImage
        +String RuntimePullPolicy
        +String UpdatedAt
    }

    class ProjectCredential {
        +String GitHubUser
        +String PAT
        +Time UpdatedAt
    }

    class Document {
        +String ID
        +String ProjectID
        +String Title
        +String Content
        +String Format
        +String SourceType
        +String SourceRef
        +Time CreatedAt
        +Time UpdatedAt
    }

    class Anomaly {
        +String ID
        +String Title
        +String Description
        +String SourceType
        +String SourceRef
        +String ProviderID
        +String Model
        +LoopEnvironment Environment
        +LoopSkillMount[] Skills
        +LoopPolicy Policy
        +Time CreatedAt
        +Time UpdatedAt
        +String CorrelationID
    }

    class State {
        +String LoopID
        +LoopState State
        +Int Attempt
        +String Reason
        +String WorkerJobName
        +String LockHolder
        +Time UpdatedAt
        +String CorrelationID
    }

    class JournalEntry {
        +String LoopID
        +Int64 Sequence
        +Time Timestamp
        +String Phase
        +String Level
        +String ActorType
        +String ActorID
        +String Message
        +String Command
        +Int ExitCode
        +String CorrelationID
    }

    class Handoff {
        +String LoopID
        +Int64 Sequence
        +Time Timestamp
        +String FinalDiffSummary
        +String ValidationState
        +String NextSteps
        +String[] ArtifactRefs
        +String CorrelationID
    }

    class LeaseLock {
        +String LoopID
        +String Holder
        +Int64 LeaseID
        +Time AcquiredAt
        +Time HeartbeatAt
    }

    class OperatorOverride {
        +String LoopID
        +Int64 Sequence
        +Time Timestamp
        +String Actor
        +String Action
        +LoopState TargetState
        +String Reason
        +String CorrelationID
    }

    class AuditRecord {
        +String EventID
        +Time Timestamp
        +String Actor
        +String Action
        +String TargetLoopID
        +String CorrelationID
    }

    Project "1" -- "1" ProjectCredential : has
    Project "1" -- "*" Document : owns
    Project "1" -- "*" Anomaly : contains
    Document "1" -- "*" Anomaly : generates
    Anomaly "1" -- "1" State : tracks
    Anomaly "1" -- "*" JournalEntry : logs
    Anomaly "1" -- "*" Handoff : delivers
    Anomaly "1" -- "0..1" LeaseLock : locked_by
    Anomaly "1" -- "*" OperatorOverride : overridden_by
    Anomaly "1" -- "*" AuditRecord : audited_via
